# BOSS

./: .env.example  .gitignore  LICENSE  Makefile  README.md  implemented_and_tested_so_far.md  pyproject.toml  run_tests.py  setup.py  task_resolvers_tracker.md
.cursor/: commands.json
.cursor/extensions/: auto_continue.js
.cursor/rules/: boss_context.mdc  check_current_time.mdc  check_dependencies.mdc  check_latest_dependency_versions.mdc  poetry_latest_versions.mdc
.cursor/scripts/: poetry_cursor.sh
boss/: __init__.py
boss/core/: __init__.py  anthropic_resolver.py  base_llm_resolver.py  evolver.py  health_check_resolver.py  llm_factory.py  mastery_composer.py  mastery_executor.py  mastery_registry.py  openai_resolver.py  registry.py  task_base.py  task_error.py  task_models.py  task_resolver.py  task_result.py  task_retry.py  task_status.py  together_ai_resolver.py  vector_search_resolver.py  xai_resolver.py
boss/lighthouse/: alert_manager_resolver.py  monitoring_resolver.py  performance_analyzer_resolver.py  telemetry_resolver.py
boss/utility/: api_wrapper_resolver.py  boss_replication_resolver.py  cache_resolver.py  context_provider_resolver.py  data_mapper_resolver.py  database_task_resolver.py  language_resolver.py  (+10 more)
boss_py_agent/: README.md  __main__.py  boss_py_agent.py  install.sh  migration_script.py  run_agent.py
docs/: auto_continue_feature.md  dependency_audit_2024-03-06.md  dependency_audit_2025-03-05.md  dependency_tracker.md  monitoring_api.md  monitoring_system.md
examples/: README.md  anthropic_example.py  api_wrapper_example.py  chained_resolvers.py  database_resolver.py  error_storage_example.py  evolver_example.py  file_operations_resolver.py  language_resolver_example.py  run_examples.py  simple_resolver.py  standalone_language_example.py  task_prioritization_example.py  together_ai_resolver.py  xai_resolver.py
requirements/: api_wrapper.txt  error_storage.txt
scripts/: README.md  cursor_alias.txt  cursor_poetry.example.sh  delete_old_trackers.sh  deploy_monitoring_service.sh  deprecate_trackers.sh  poetry_functions.sh  poetry_latest.sh  sample_workflow.md  setup_auto_continue.sh  update_tracker.py
tests/: __init__.py  conftest.py
(+99 files in other folders)
