[tool.poetry]
name = "boss"
version = "0.1.0"
description = "BOSS - Business Operations Support System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "boss"}]

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.22.0"
faiss-cpu = "^1.7.4"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
