[tool.poetry]
name = "boss"
version = "0.1.0"
description = "BOSS - Business Operations Support System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "boss"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.3"
faiss-cpu = "^1.10.0"
asyncio = "^3.4.3"
together = "^1.4.1"
xai-grok-sdk = "^0.0.12"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
types-pyyaml = "^6.0.12.20241230"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
together = ["together"]
xai = ["xai-grok-sdk"]
